2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b195

	* Language: - Synced Languages.
		    - Updated German (de_DE), Bulgarian (bg_BG)

2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b194

	* Bug fixes (mostly thanks to h0bbel).  Viz:

	* Don't try to send mail to pseudo users.

	* New password link is now sent (if mail requested) to newly created 
	  users from "Manage Users"

	* CreateNewUser now returns user rather than 1 on success (so hash 
	  can be added if email sent).

	* As password change page is now correctly inserted into the email as 
	  new password link, no longer include pretty-printed passwords in 
	  email.

	* One sentence changed in translation, due to misplaced <br> - sorry 
	  Jens!

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b193

	* Language: Update Vietnamese (vi_VN)

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b192
	
	* Change: remove debug code

	* Language: - Found an untranslated string. Synced languages against it.
		    - Updated German (de_DE), Vietnamese (vi_VN)

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b191
	
	* Bugfix: No locales on "other" OS, should work now.

2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b190

	* Language: Updated German (de_DE), Swedish (sv_SE)

2003-10-24  Bharat Mediratta  <bharat@menalto.com> 1.4.1-cvs-b189

	* Fixed a bug in the Album class where we were resetting the 
	  last modification date when we shouldn't have been on all
	  below-the-bar changes (eg click count manipulation).

2003-10-24 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b188

	* Language: - Translated missing string.
		    - Synced Languages against this.
		    - Updated German (de_DE), Lithuanian (lt_LT).

	* Change: - Added some Linebreaks for better reading.
		  - Remove yellow colored background for locale warningtext.
	

2003-10-23 John Kirkland <jpk@bl.org> 1.4.1-cvs-b187

	* Fixed [ 829241 ] Move nested album to a nested album in itself

2003-10-23 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b186
