@@ -1,3 +1,8 @@
+2003-10-21 Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-cvs-b196
+
+	* Fixed bug in voting.  Critique votes were being set to default 
+	  values for images that weren't voted for.
+
 2003-10-25 Jens Tkotz <jens@peino.de> 1.4.1-cvs-b195
 
 	* Language: - Synced Languages.
